--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "method-override": "^2.3.5",
     "mongoose": "^4.4.5",
     "morgan": "^1.7.0",
+    "nodemon": "^1.9.1",
     "url-parse": "^1.0.5"
   },
   "devDependencies": {},
