--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "app-root-path": "^1.0.0",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "follow-redirects": "0.0.7",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.5",
     "morgan": "^1.7.0",
