--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "follow-redirects": "0.0.7",
+    "html-to-json": "^0.6.0",
+    "is-image-url": "^1.1.8",
+    "is-pdf": "^1.0.0",
+    "lodash": "^4.9.0",
+    "metatags": "0.0.8",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.5",
     "morgan": "^1.7.0",
     "needle": "^1.0.0",
     "nodemon": "^1.9.1",
+    "og-parser": "^1.0.5",
+    "string": "^3.3.1",
     "url-parse": "^1.0.5"
   },
   "devDependencies": {},
