--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "app-root-path": "^1.0.0",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "favicon": "0.0.2",
     "follow-redirects": "0.0.7",
     "html-to-json": "^0.6.0",
     "is-image-url": "^1.1.8",
@@ -20,8 +21,11 @@
     "needle": "^1.0.0",
     "nodemon": "^1.9.1",
     "og-parser": "^1.0.5",
+    "scraper-js": "^1.0.2",
     "string": "^3.3.1",
-    "url-parse": "^1.0.5"
+    "url-parse": "^1.0.5",
+    "url-to-screenshot": "^0.6.0",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {},
   "scripts": {
