--- a/package.json
+++ b/package.json
@@ -27,9 +27,23 @@
     "url-to-screenshot": "^0.6.0",
     "valid-url": "^1.0.9"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "blanket": "^1.2.3",
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0"
+  },
+  "config": {
+    "blanket": {
+      "pattern": [
+        "scrape.js"
+      ],
+      "data-cover-never": "node_modules"
+    }
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha && mocha test --require blanket --reporter html-cov > coverage.html"
   },
   "repository": {
     "type": "git",
