--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Scripts for scraping",
   "main": "server.js",
   "dependencies": {
+    "angular-ui-bootstrap": "^2.1.3",
     "app-root-path": "^1.0.0",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
