--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "angular-ui-bootstrap": "^2.1.3",
+    "angularjs-toaster": "^2.0.0",
     "app-root-path": "^1.0.0",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
