--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Scripts for scraping",
   "main": "server.js",
   "dependencies": {
-    "angular-ui-bootstrap": "^2.1.3",
+    "angular": "^1.5.8",
+    "angular-ui-bootstrap": "^2.2.0",
     "angularjs-toaster": "^2.0.0",
     "app-root-path": "^1.0.0",
     "body-parser": "^1.15.0",
